--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 class="heading">Heading branch master</h1>
+    <h1 class="heading">Heading branch header</h1>
 </body>
 </html>
